--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,6 +97,20 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  "skipLibCheck": true, /* Skip type checking all .d.ts files. */
+  "lib": [
+    "dom",
+    "dom.iterable",
+    "esnext"
+  ],
+  "allowJs": true,
+  "allowSyntheticDefaultImports": true,
+  "noFallthroughCasesInSwitch": true,
+  "resolveJsonModule": true,
+  "noEmit": true,
+  "jsx": "react-jsx"
+  },
+  "include": [
+    "src"
+  ]
 }
