--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "print-js": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ionicons": "^4.2.0",
