--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -28,11 +28,14 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@react-pdf/renderer": "^1.6.17",
+    "@types/react-pdf": "^5.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "test": "react-scripts test",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
