--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server/index.ts",
-    "tsbuild": "tsc -p .",
-    "postinstall": "tsc",
-    "build": "cd src/frontend && npm run build",
-    "install-client": "cd src/frontend/build && npm install",
+    "build": "tsc --project .",
+    "postinstall": "npm run tsbuild",
+    "build-prod": "cd src/frontend && npm install && npm run build && cd .. && npm install && npm run build",
+    "install-client": "npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node dist/server/index.js"
+    "start": "node dist/server/index.js",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix"
   },
   "keywords": [],
   "author": "",
@@ -21,15 +22,15 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.10"
+    "mongoose": "^6.0.10",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.3",
-    "nodemon": "^2.0.13",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "nodemon": "^2.0.13"
   },
   "engines": { "node": "v14.17.1"}
 }
